<resources>
    <string name="app_name">Body Mass Index</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="calculate">Рассчитать</string>
    <string name="body_mass_index">Индекс массы тела</string>
    <string name="recommendations">Рекомендации</string>
    <string name="exit_to_home">Вернуться на домашний экран</string>
    <string name="tips_for_thin">Несколько советов по ведению здорового образа жизни для худых:
Находиться в постоянном движении. Можно много ходить пешком или заниматься любимым видом спорта.
Есть, когда чувствуешь голод. Не стоит развлекать себя едой лишь из-за скуки.
Знать свою норму приёма пищи. Чаще всего худые люди плотно завтракают, а на ужин едят меньше.
Высыпаться. Даже если сон был коротким, стоит позволить себе отдохнуть после обеда.
Не торопиться во время приёма пищи. Есть нужно медленно, с расстановкой и удовольствием.
Выбирать «настоящие» продукты. Настоящий сахар, творог, цельное молоко вкуснее, чем продукты-заменители.
Правильно справляться со стрессом. Не стоит держать все эмоции внутри, лучше сразу высказать недовольство.
Не отказывать себе в удовольствиях. Удовольствие можно находить не в еде, а в путешествиях, прогулках, времяпровождении с друзьями.
Перед началом любых изменений в образе жизни рекомендуется проконсультироваться со специалистом.</string>

    <string name="tips_for_normal">Несколько советов по ведению здорового образа жизни для нормального телосложения:
        Правильное питание. Нужно есть как минимум 4–5 раз в день небольшими порциями.
        По окончании трапезы должно оставаться ощущение лёгкого голода.
        Суточное меню должно содержать мясо или рыбу, овощи и фрукты, крупы, кисломолочные продукты.
        Ужинать лучше не менее чем за 2 часа до сна.
        Физическая активность. Нормальным считается проводить в движении не менее 1 часа в день (это около 8000–10 000 шагов).
        Можно начать и закончить день лёгкой разминкой.
        Полноценный сон. Важно спать не менее 7–8 часов в сутки.
        Перед сном рекомендуется совершить прогулку на воздухе, а также исключить взаимодействие с гаджетами за два часа до сна.
        Пить чистую воду. Желательно употреблять в день от 1,5 до 2 литров воды.
        Отказаться от вредных привычек. К ним относятся курение, употребление наркотических препаратов и больших доз алкоголя.
        Перед началом любых изменений в образе жизни рекомендуется проконсультироваться со специалистом.</string>

    <string name="tips_for_overweight">Перед началом любых мер по ведению здорового образа жизни рекомендуется проконсультироваться с врачом.
        Несколько советов для полных людей:
        Ограничить потребление легкоусвояемых углеводов и сахаров (до 30 грамм в сутки и менее).
        Ограничить крахмалсодержащие продукты: хлеб, изделия и блюда из круп, картофель.
        Обеспечить достаточное потребление белковых продуктов: мяса, рыбы, птицы, яиц, молочных продуктов (до 250–300 грамм в сумме в сутки). 1
        Потреблять много овощей (кроме картофеля) и несладких фруктов (до 1 кг в сутки суммарно и более).
        Ограничить потребление жира животного и растительного происхождения.
        Ограничить потребление поваренной соли с целью нормализации водно-солевого обмена.
        Ограничить потребление острых закусок, соусов, пряностей, возбуждающих аппетит.
        Питаться дробно и часто — до 5–6 раз в день, но в небольших количествах.
        Увеличить физическую активность (ходьба пешком, плавание, лыжные прогулки, танцы и др.).
        Нагрузки не должны быть чрезмерными, а их длительность и интенсивность нужно увеличивать постепенно.
        Последний приём пищи должен быть не позднее, чем за 2 часа до сна. </string>
</resources>